Fri May 16 17:26:24 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (gc_before_sweep): heap_pages_swept_slots should contains
	  heap_pages_increment.

	  For example, GC by exceeding malloc_limit can remain
	  heap_pages_increment.

Thu May 15 21:18:43 2014  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* configure.in: enable SSE2 on mingw. target='i386-pc-mingw32'.
	  [ruby-core:62095] [Bug #8358]

Thu May 15 21:04:06 2014  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* lib/test/unit/parallel.rb: fix test-all parallel failure if a test
	  is skipped after raise.
	  DL::TestFunc#test_sinf is skipped after raise on mingw ruby.
	  But it causes Mashal.load failure due to undefined class/module
	  DL::DLError when doing test-all parallel and test-all doesn't
	  complete. We create new MiniTest::Skip object to avoid Mashal.load
	  failure.
	  [ruby-core:62133] [Bug #9767]

	* test/testunit/test_parallel.rb (TestParallel): add a test.

	* test/testunit/tests_for_parallel/ptest_forth.rb: ditto.

Thu May 15 18:57:23 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (garbage_collect_body): move gc_heap_prepare_minimum_pages()
	  from gc_sweep().

Thu May 15 18:51:25 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c (heap_extend_pages): calculate next growing heap size.

	* gc.c (heap_set_increment): accept addition pages instead of
	  minimum pages.

	* gc.c (gc_after_sweep): use heap_etend_pages().

	* gc.c (gc_heap_prepare_minimum_pages): add only 1 page.

	* gc.c (heap_ready_to_gc): add only 1 page.

Thu May 15 18:42:49 2014  Koichi Sasada  <ko1@atdot.net>

	* gc.c: introduce macros to remove magic number.

	  GC_HEAP_FREE_SLOTS_MIN_RATIO = 0.3: guarantee minimum empty slots
	                                      ratio after sweep.
	  GC_HEAP_FREE_SLOTS_MAX_RATIO = 0.8: allow to free pages 0.2 (= 1-0.8)
	                                      of current existing slots.

Thu May 15 17:32:51 2014  Hiroshi Shirosaki  <h.shirosaki@gmail.com>
